Se agrego la funcion para descargar el formato de entrega   pdf, falta modificar el diseño del formato para insertar huella y que sea mas legible

--- a/frontendUnipalama/src/index.css
+++ b/frontendUnipalama/src/index.css
@@ -2071,3 +2071,12 @@
         /* estilos nabvar */
           /* estilos nabvar */
           /* diseño.css */ 
+
+
+ /* Estilos para la descarga de pdf */
+  /* Estilos para la descarga de pdf */
+   /* Estilos para la descarga de pdf */
+    /* Estilos para la descarga de pdf */
+    .hidden-for-pdf {
+      display: none;
+  }
