--- a/frontendUnipalama/src/index.css
+++ b/frontendUnipalama/src/index.css
@@ -1248,6 +1248,31 @@
   a.btn-Agregar:active {
     background-color: #388e3c;
   }
+
+  .epp-list-entregas{
+    list-style: none;
+    padding: 0;
+    margin-top: 20px;
+  }
+
+  .epp-item-entrega{
+    background-color: white;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    padding: 15px;
+    margin-bottom: 10px;
+  }
+
+  .epp-item-header{
+    font-size: 18px;
+    font-weight: bold;
+    margin-bottom: 10px;
+  }
+
+  .epp-item-details p {
+    margin: 5px 0;
+    font-size: 14px;
+  }
   
   /* pagina                      de                                   administrador*/
   /* pagina                      de                                   administrador*/
